# ble_test_gdbus_codegen

./: .gitignore  CMakeLists.txt  introspect.xml  readme.md
include/: ble_app_client.h  main.h
src/: ble_app_client.c  main.cpp
